Fixed issue: clicking on links behind loading screen Clicking on links behind loading screen was not restricted. For ex: while uploading image if user clicks on back link behind the loading screen, it was redirecting back

--- a/app/styles/templates/_loading.scss
+++ b/app/styles/templates/_loading.scss
@@ -1,5 +1,6 @@
 /* can't use 'loading' since link-to uses it http://emberjs.com/api/classes/Ember.LinkView.html#property_loadingClass */
 .loading-indicator, .loading-image-indicator {
+  z-index: 100;
   position:fixed;
   width:100%;
   height:100%;
